{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "713eea7e-9fcb-4fb7-884e-a4bf31083c38",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "78ad987d-bcae-4569-b256-5c0d0731dc29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "e0c9f44e-492a-405d-baf3-2c597f6196fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swing1",
                    "type": "Button",
                    "id": "8089b634-4f82-4665-b77f-89c1b4089f46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swing2",
                    "type": "Button",
                    "id": "1f1d1283-d702-4cf4-b573-5f4c6af05b48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement2",
                    "type": "PassThrough",
                    "id": "00b6c4cb-2150-4277-8717-6e1df1e25524",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge2",
                    "type": "Button",
                    "id": "77d3fbfb-8ec8-408c-a461-b8a37a2e0a5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0a5919df-6e98-4407-9f54-dc162987d1bd",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eea587aa-424a-4bc5-b376-8e8187a6f004",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7372fa3d-8889-4268-b7e4-7d389bf1146f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4c5bd7b4-f4e7-46ff-ab42-73a6b82b7927",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "388f383f-72ea-46c8-954d-37815c181252",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "36b6d9e2-0120-42e4-a82b-f2d8575ce9b2",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1bb2f9d4-2e76-426b-8737-61c645a137e2",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e8bd09ab-91a4-42a2-8a88-15a201827b0d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "52b3fa72-e692-4e55-8690-933fd59f8a30",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b5d8e49-3545-4818-9df4-1f332c207f9c",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0534b18-670b-4dd9-8ffe-664b45f89a94",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "753d6f5c-4121-4ff2-8053-9e390f76c42f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "099807a3-630f-4da4-9f9d-992daf860ccf",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Swing1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bfc331a-edf1-4aa9-a03d-6ddb46a034c3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Swing1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91585c27-db44-4326-9129-e5aaeb85ead5",
                    "path": "<Keyboard>/comma",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Swing2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b4b932f4-965d-461f-9ea9-ad5016440209",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "079c5812-4add-4720-a9d9-8a3a7f8324e4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "299c6fd0-c6ad-43a7-a910-68b79ebf568e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aca08cd7-7e6b-419d-be5e-19913cd9ceca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b2d0d161-faab-497a-9d64-989e5d72ad39",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fde9d15e-7201-4c16-a9be-8f814ef23aaf",
                    "path": "<Keyboard>/period",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Dodge2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}